<resources>
    <string name="app_name">BuddiesMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="fb_login">Login</string>
    <string name="request">User Info</string>
    <string name="post">Wall Post!</string>
    <string name="delete">Delete Post</string>
    <string name="simple_list_2_name">Friends List</string>
    <string name="friends_list_2">Friends List</string>
    <string name="hometown_label">Homes</string>
    <string name="loc_label">Locations</string>
    <string name="recommend_label">Recommend</string>
    <string name="search_label">Search</string>
    <string name="send_label">Send</string>
    <string name="recommendation_dialog_title">Recommend!</string>
    <string name="dialogEditTitle_label">Title</string>
    <string name="dialogEditTitle_hint">Who/What do you recommend?</string>
    <string name="dialogEditPhone_label">Phone</string>
    <string name="dialogEditPhone_hint">Contact Phone</string>
    <string name="dialogEditLocation_label">Location</string>
    <string name="dialogEditLocation_hint">Location</string>
</resources>
